--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,122 +1,136 @@
 .container {
-  min-height: 100vh;
-  padding: 0 0.5rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.main {
-  padding: 5rem 0;
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer {
   width: 100%;
-  height: 100px;
-  border-top: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
+  height: 100vh;
+  background-color: #29B6D1;
 
-.footer img {
-  margin-left: 0.5rem;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.title a {
-  color: #0070f3;
-  text-decoration: none;
-}
-
-.title a:hover,
-.title a:focus,
-.title a:active {
-  text-decoration: underline;
-}
-
-.title {
-  margin: 0;
-  line-height: 1.15;
-  font-size: 4rem;
-}
-
-.title,
-.description {
-  text-align: center;
-}
-
-.description {
-  line-height: 1.5;
-  font-size: 1.5rem;
-}
-
-.code {
-  background: #fafafa;
-  border-radius: 5px;
-  padding: 0.75rem;
-  font-size: 1.1rem;
-  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.grid {
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
-  max-width: 800px;
-  margin-top: 3rem;
 }
 
-.card {
-  margin: 1rem;
-  flex-basis: 45%;
-  padding: 1.5rem;
-  text-align: left;
-  color: inherit;
-  text-decoration: none;
-  border: 1px solid #eaeaea;
-  border-radius: 10px;
-  transition: color 0.15s ease, border-color 0.15s ease;
+div.left {
+  width: 450px;
+  margin-right: 100px;
 }
 
-.card:hover,
-.card:focus,
-.card:active {
-  color: #0070f3;
-  border-color: #0070f3;
+div.left h1, div.left p {
+  color: #ffffff;
 }
 
-.card h3 {
-  margin: 0 0 1rem 0;
-  font-size: 1.5rem;
+div.left h1 {
+  font-size: 42px;
+  margin-top: 60px;
+  margin-bottom: 40px;
 }
 
-.card p {
-  margin: 0;
-  font-size: 1.25rem;
-  line-height: 1.5;
+form.loginForm {
+  margin-bottom: 35px;
 }
 
-.logo {
-  height: 1em;
+form.loginForm fieldset {
+  border: 0;
 }
 
-@media (max-width: 600px) {
-  .grid {
-    width: 100%;
+form.loginForm .inputBlock + .inputBlock {
+  margin-top: 16px;
+}
+
+form.loginForm .inputBlock label {
+  display: flex;
+  color: #ffffff;
+  margin-bottom: 8px;
+  line-height: 16px;
+}
+
+form.loginForm .inputBlock input {
+  width: 100%;
+  height: 36px;
+  padding: 0 16px;
+  background: #F5F8FA;
+  border: 1px solid #D3E2E5;
+  border-radius: 20px;
+  outline: none;
+  color: #5C8599;
+  font-size: 15px;
+  font-family: 'Poppins', sans-serif;
+}
+
+button.loginButton {
+  margin-top: 16px;
+  width: 100px;
+  height: 36px;
+  border: 0;
+  cursor: pointer;
+  border-radius: 20px;
+  color: #FFFFFF;
+  font-weight: 800;
+  background: #ffd666;
+  float: right;
+  margin-right: 20px;
+
+  transition: background-color 0.2s;
+}
+
+button.loginButton:hover {
+  opacity: 0.9;
+}
+
+a.register {
+  width: 100px;
+  cursor: pointer;
+  color: #FFFFFF;
+  font-size: 18px;
+  font-weight: 500;
+
+  transition: background-color 0.2s;
+}
+
+a.register:hover {
+  opacity: 0.8;
+}
+
+
+/* Mobile */
+@media (max-width: 700px) {
+  .container {
+    /* width: 700px; */
     flex-direction: column;
+  }
+
+  .container .right {
+    display: none;
+  }
+
+  .container div.left {
+    width: 100%;
+    margin-right: 0;
+    padding: 0 30px;
+  }
+
+  .container div.left svg {
+    width: 60%;
+  }
+
+  .container div.left h1 {
+    font-size: 32px;
+    margin-top: 30px;
+    line-height: 40px;
+  }
+
+  form.loginForm .inputBlock + .inputBlock {
+    margin-top: 14px;
+  }
+
+  form.loginForm .inputBlock label {
+    font-size: 14px;
+    margin-bottom: 5px;
+  }
+
+  button.loginButton {
+    width: 100%;
+    height: 40px;
+    font-size: 16px;
+    margin-top: 30px;
+    float: none;
   }
 }
