--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,8 @@
 html,
 body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Poppins', sans-serif;
+  background: #F0F2F5 ;
+  -webkit-font-smoothing: antialiased
 }
 
 a {
@@ -12,5 +11,12 @@ a {
 }
 
 * {
+  margin: 0;
+  padding: 0;
+  outline: 0;
   box-sizing: border-box;
+}
+
+button {
+  cursor: pointer;
 }
