--- a/styles/RegisterTicket.module.css
+++ b/styles/RegisterTicket.module.css
@@ -89,18 +89,33 @@ form.registerTicketForm button.saveButton {
   border: 0;
   cursor: pointer;
   border-radius: 20px;
-  color: #FFFFFF;
+  color: #8D734B;
   font-weight: 800;
   background: #ffd666;
   float: right;
   margin-right: 20px;
   font-size: 16px;
 
-  transition: background-color 0.2s;
+  transition: background-color 0.1s;
 }
 
 form.registerTicketForm button.saveButton:hover {
-  opacity: 0.9;
+  background: #96FEFF;
+  color: #15C3D6;
+}
+
+form.registerTicketForm button.saveButtonLoading {
+  margin-top: 32px;
+  width: 150px;
+  height: 48px;
+  border: 0;
+  border-radius: 20px;
+  font-weight: 800;
+  background: #96FEFF;
+  color: #15C3D6;
+  float: right;
+  margin-right: 20px;
+  font-size: 16px;
 }
 
 
@@ -135,7 +150,8 @@ form.registerTicketForm button.saveButton:hover {
     font-size: 22px;
   }
 
-  form.registerTicketForm button.saveButton {
+  form.registerTicketForm button.saveButton,
+  form.registerTicketForm button.saveButtonLoading {
     width: 100%;
     height: 90px;
     font-size: 26px;
