--- a/styles/Tickets.module.css
+++ b/styles/Tickets.module.css
@@ -89,6 +89,9 @@
 .ticketsContainer .winner .left {
   border-right: 3px dashed #ffd666;
   padding-right: 5px;
+
+  display: flex;
+  flex-direction: column;
 }
 
 .ticketsContainer .ticket .right,
@@ -116,6 +119,14 @@
 .ticketsContainer .winner svg {
   display: block;
   margin-bottom: 10px;
+}
+
+.ticketsContainer .ticket .left img,
+.ticketsContainer .winner .left img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: cover;
 }
 
 
@@ -183,6 +194,13 @@
   .ticketsContainer .winner svg {
     width: 36px;
     height: 36px;
+  }
+
+  .ticketsContainer .ticket .left img,
+  .ticketsContainer .winner .left img {
+    width: 80px;
+    height: 80px;
+    margin-bottom: 15px;
   }
 }
 
